--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.2"
   },
   "dependencies": {
+    "flexboxgrid": "^6.3.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
