--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
+    "mongodb": "^2.2.16",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-google-maps": "^6.0.1"
